/**
 */
package cr2;

import org.eclipse.emf.ecore.EObject;

/**
 * <!-- begin-user-doc -->
 * A representation of the model object '<em><b>User Feedback</b></em>'.
 * <!-- end-user-doc -->
 *
 * <p>
 * The following features are supported:
 * </p>
 * <ul>
 *   <li>{@link cr2.UserFeedback#getName <em>Name</em>}</li>
 *   <li>{@link cr2.UserFeedback#getSubject <em>Subject</em>}</li>
 * </ul>
 *
 * @see cr2.Cr2Package#getUserFeedback()
 * @model abstract="true"
 * @generated
 */
public interface UserFeedback extends EObject {
	/**
	 * Returns the value of the '<em><b>Name</b></em>' attribute.
	 * <!-- begin-user-doc -->
	 * <!-- end-user-doc -->
	 * @return the value of the '<em>Name</em>' attribute.
	 * @see #setName(String)
	 * @see cr2.Cr2Package#getUserFeedback_Name()
	 * @model
	 * @generated
	 */
	String getName();

	/**
	 * Sets the value of the '{@link cr2.UserFeedback#getName <em>Name</em>}' attribute.
	 * <!-- begin-user-doc -->
	 * <!-- end-user-doc -->
	 * @param value the new value of the '<em>Name</em>' attribute.
	 * @see #getName()
	 * @generated
	 */
	void setName(String value);

	/**
	 * Returns the value of the '<em><b>Subject</b></em>' container reference.
	 * It is bidirectional and its opposite is '{@link cr2.Subject#getUserfeedback <em>Userfeedback</em>}'.
	 * <!-- begin-user-doc -->
	 * <!-- end-user-doc -->
	 * @return the value of the '<em>Subject</em>' container reference.
	 * @see #setSubject(Subject)
	 * @see cr2.Cr2Package#getUserFeedback_Subject()
	 * @see cr2.Subject#getUserfeedback
	 * @model opposite="userfeedback" transient="false"
	 * @generated
	 */
	Subject getSubject();

	/**
	 * Sets the value of the '{@link cr2.UserFeedback#getSubject <em>Subject</em>}' container reference.
	 * <!-- begin-user-doc -->
	 * <!-- end-user-doc -->
	 * @param value the new value of the '<em>Subject</em>' container reference.
	 * @see #getSubject()
	 * @generated
	 */
	void setSubject(Subject value);

} // UserFeedback
